--- a/BobMarley/BobMarley.html
+++ b/BobMarley/BobMarley.html
@@ -2,23 +2,58 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Bob Marley</title>
 </head>
 
 <body>
-<h2>Bob Marley, Tale of the Tough Gong</h2>
 <img src="BobMarley.jpg"> <br>
-Series: 2 issue mini series<br>
-Illustrator: Gene Colon, Tennyson Smith (cover)<br>
-Writer: Charles E. Hall<br>
-Publisher: 1994 Marvel Music<br>
+14 Studio Albums 1965-1983. 2 issue comic 1994. Documentary "Marley" in 2012.
 <p>
-Foreword by U2's Bono. Beginning the life story of the reggae superstar who grew out of poverty to change the world. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BobMarley.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley07.jpg" title="Original Zippo Cover to Catch a Fire">></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley08.jpg" title="Reprint Cover to Catch a Fire"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BobMarley16.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+Robert Nesta Marley (6 February 1945 – 11 May 1981) was a Jamaican singer and songwriter. Considered one of the pioneers of reggae, his musical career was marked by blending elements of reggae, ska, and rocksteady, as well as forging a smooth and distinctive vocal and songwriting style. Marley's contributions to music increased the visibility of Jamaican music worldwide, and made him a global figure in popular culture for over a decade.
+</p><p>
+Born in Nine Mile, British Jamaica, Marley began his professional musical career in 1963, after forming Bob Marley and the Wailers. The group released its debut studio album The Wailing Wailers in 1965, which contained the single "One Love/People Get Ready"; the song was immensely popular, peaking in the top five on worldwide music charts, and established the group as a rising figure in reggae.
+</p><p>
+The Wailers subsequently released eleven further studio albums; while initially employing louder instrumentation and singing, the group began engaging in rhythmic-based song construction in the late 1960s and early 1970s, which coincided with the singer's conversion to Rastafarianism. During this period Marley relocated to London, and the group typified their musical shift with the release of the album The Best of The Wailers (1971).
+</p><p>
+A two issue comic book biography titled "Bob Marley, Tale of the Tough Gong" was released in 1994 by Marvel with a foreword by U2's Bono. Beginning the life story of the reggae superstar who grew out of poverty to change the world. 
 </p><p>
 BOOK ONE: IRON follows Bob's early days in Jamaica and the formation of his band, the Wailers. 
 </p><p>
 BOOK TWO: LION. Bob Marley rises to international fame with big hits like "I Shot the Sheriff" and "Stir It Up!" While back in Jamaica, several unscrupulous mystery men conspire to kill the reggae superstar. 
 </p>
+
 </body>
 </html>
