--- a/kb.html
+++ b/kb.html
@@ -2531,6 +2531,13 @@ Creative Knowledgebase<br>
 <td><a href="BobKane/BobKane.html">Details</a></td>
 
 <tr>
+<td>Bob Marley</td>
+<td>1945</td>
+<td>Creator</td>
+<td><a href="BobMarley/BobMarley.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bob Marley, Tale of the Tuff Gong</td>
 <td>1994</td>
 <td>Marvel</td>
