--- a/CaptainMarvel/CaptainMarvel.html
+++ b/CaptainMarvel/CaptainMarvel.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<img src="CaptainMarvel1968.jpg"> <br>
-1968-2017 by Marvel<br>
+<img src="CaptainMarvel01.jpg"><img src="CaptainMarvelMovie.jpg"><br>
+1968-2017 by Marvel, 2019 Movie by Disney<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -19,13 +19,55 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel1968.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel32.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainMarvel33.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DeathOfCaptainMarvel1982.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainMarvel1989.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainMarvel1995.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2000.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel2019_10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvelMovie.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -49,6 +91,10 @@ The second Captain Marvel was created by writer Roger Stern and artist John Romi
 The character is Monica Rambeau, a police lieutenant from New Orleans who possesses the power to transform herself into any form of energy. Her powers were briefly altered so that she cannot transform to energy, but instead can generate a personal force field. Sometime later, the Stranger returned her energy transformation abilities. She is a member of the Avengers, and at one point served as their leader. She eventually ceded the Captain Marvel name to the original Captain Marvel's son after which Rambeau took the name Photon, using that for quite some time, until Genis-Vell adopted the same name. Genis-Vell and Monica discussed this and Monica decided on the name Pulsar.
 </p><p>
 1968 Issue #1 Captain Marvel battles a Kree Sentry in "Out of the Holocaust--a Hero!" Script by Roy Thomas, pencils by Gene Colan, inks by Vince Colletta. Colan/Colletta cover.
+</p><p>
+Captain Marvel is a 2019 American superhero film based on the Marvel Comics character Carol Danvers. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the twenty-first film in the Marvel Cinematic Universe (MCU). The film is written and directed by Anna Boden and Ryan Fleck, with Geneva Robertson-Dworet also contributing to the screenplay. Brie Larson stars as Danvers, alongside Samuel L. Jackson, Ben Mendelsohn, Djimon Hounsou, Lee Pace, Lashana Lynch, Gemma Chan, Annette Bening, Clark Gregg, and Jude Law. Set in 1995, the story follows Danvers as she becomes Captain Marvel after Earth is caught in the center of a galactic conflict between two alien civilizations.
+</p><p>
+The film grossed over $1.1 billion worldwide, making it the first female-led superhero film to pass the billion-dollar mark. It is currently the second-highest-grossing film of 2019, and became the ninth-highest-grossing superhero film of all time as well as the 22nd-highest-grossing film overall. The film received praise for the performances of the cast, particularly that of Larson.
 </p>
 
 </body>
