--- a/Dollhouse/Dollhouse.html
+++ b/Dollhouse/Dollhouse.html
@@ -2,19 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dollhouse</title>
 </head>
 
 <body>
-<h2>Dollhouse</h2>
-<img src="Dollhouse.jpg"> <br>
-Series: 5 issue mini-series<br>
-Publisher: Dark Horse<br>
+<img src="DollhouseTV.jpg"> <br>
+27 episode TV Series in 2009 by Fox, 5 issue comic series by Darkhorse
 <p>
-Cover by Phil Noto Andrew Chambliss. Written by, Maurissa Tancharoen, Jed Whedon, Cliff Richards. Illustrated by Andy Owens, Michelle Madsen.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Dollhouse1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dollhouse2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dollhouse3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dollhouse4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dollhouse5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-The fight for free will starts now! Alpha was the perfect product of Rossum Corporation's mind-altering technology, until he snapped, burdened by the dozens of personalities they'd downloaded into his brain. Now the technology has gone viral, turning the entire population into murderous automatons, and it's up to the psychotic Alpha and a small group of survivors to save mankind.
+Dollhouse is an American science fiction television series created by writer and director Joss Whedon under Mutant Enemy Productions. It premiered on February 13, 2009, on the Fox network and was officially canceled on November 11, 2009. The final episode aired on January 29, 2010. Production wrapped in December 2009, with a total of 27 episodes produced including the original pilot.
+</p><p>
+The show revolves around a corporation running numerous underground establishments (known as "Dollhouses") around the globe that program individuals referred to as Actives (or Dolls) with temporary personalities and skills. Wealthy clients hire Actives from Dollhouses at great expense for various purposes, including heists, sexual encounters, assassinations, expert counsel, and all manner of unique experiences. The series primarily follows the Active known as Echo, played by Eliza Dushku, on her journey toward self-awareness. Dushku also served as series producer.
+</p><p>
+The comic series: The fight for free will starts now! Alpha was the perfect product of Rossum Corporation's mind-altering technology, until he snapped, burdened by the dozens of personalities they'd downloaded into his brain. Now the technology has gone viral, turning the entire population into murderous automatons, and it's up to the psychotic Alpha and a small group of survivors to save mankind.
 </p>
 
 </body>
