--- a/Domino/Domino.html
+++ b/Domino/Domino.html
@@ -7,13 +7,11 @@
 </head>
 
 <body>
-<h2>Domino</h2>
 <img src="Domino1997.jpg"> 
 <img src="Domino2003.jpg"> <br>
-Series: 3 issue mini-series 1997, 4 issue mini-series 2003.	<br>
-Publisher: Marvel<br>
+3 issue mini-series in 1997, 4 issue mini-series in 2003 by Marvel
 <p>
-1997: We know she's a longtime "partner" of Cable. We also know she currently co-leads the mutant strike force called X-Force. But what do we really know about Domino? Now all the pieces fall into place in this 3-issue limited series! Written by Ben Raab. Art and cover by David Perrin and Harry Candelario. 
+1997: We know she's a longtime "partner" of Cable. We also know she currently co-leads the mutant strike force called X-Force. But what do we really know about Domino? Now all the pieces fall into place in this 3-issue limited series! Written by Ben Raab. Art and cover by David Perrin and Harry Candelario.
 </p><p>
 2003: Writer: Joe Pruett. Illustrator: Brian Stelfreeze. The fan-favorite X-Men character explodes in her long-awaited solo limited series. Her past has always been a mystery, even to her, but soon Domino will discover secrets about herself than even she would rather have never uncovered.
 </p>
