--- a/DoomPatrol/DoomPatrol.html
+++ b/DoomPatrol/DoomPatrol.html
@@ -2,23 +2,52 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Doom Patrol</title>
 </head>
 
 <body>
-<h2>Doom Patrol</h2>
-<img src="DoomPatrol.jpg"> <br>
-Illustrators: Nick Derington, Mike Allred
-Writer: Gerard Way
-Series: <br>
-Publisher: 2017 Young Animal (DC)<br>
+<img src="DoomPatrolTV.jpg"> <br>
+39 issues 1964-1973, 87 issues 1987-1995, 22 issues 2001-2003, 18 issues 2004-2006, 22 issues 2009-2011, 12 issues 2016-2018, also a TV series in 2019 by DC<br>
 <p>
-In a not-altogether-surprising turn of events, it took Young Animal architect Gerard Way and illustration sensation Nick Derington a bit longer than anticipated to wrap the first arc of their psychedelic Doom Patrol reinvention, although fans of the franchise will be hard pressed to argue that initial arc “Brick by Brick” wasn’t worth the wait. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoomPatrol20.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
-Way and Derington, with ample assistance from colorist Tamra Bonvillain, distill the gonzo appeal of Grant Morrison and Richard Case’s storied run—as well as Rachel Pollack and company’s oft-overlooked follow-up—with genuinely new ideas, a feat that’s rarer than it should be in the modern comic climate. 
+The Doom Patrol is a superhero team appearing in publications from DC Comics. The original Doom Patrol first appeared in My Greatest Adventure #80 (June 1963), and was created by writers Arnold Drake and Bob Haney, and artist Bruno Premiani. The Doom Patrol has since appeared in multiple incarnations in comics and adapted to other media. Although not one of the most popular superhero teams, they have never been out of print more than a few years since their introduction.
 </p><p>
-During an era of reboots eager to trash previous continuities, Way, Derington and Bonvillain (with a reliably great guest assist from Mike and Laura Allred) folded years of reality-jettisoning storytelling into a fresh story of an EMT in over her head, and a gyro that’s more than just tasty street food. Doom Patrol didn’t ship as many issues as expected in 2017, but every long-awaited installment proves the vital need for Young Animal’s thesis statement: Comics for Dangerous Humans.
+The first Doom Patrol consisted of super-powered misfits whose "gifts" caused them alienation and trauma. Dubbed the "World's Strangest Heroes" (an epithet conceived by editor Murray Boltinoff), the original team included The Chief (Niles Caulder), Robotman (Cliff Steele), Elasti-Girl (Rita Farr), and Negative Man (Larry Trainor). The team remained the featured characters of My Greatest Adventure, which was soon retitled Doom Patrol from issue #86 (March 1964) onwards. The original series was canceled in 1968 when Drake killed the team off in the final issue, Doom Patrol #121 (September–October 1968). Since then, there have been six Doom Patrol series, with Robotman as the only character to appear in all of them.
 </p>
 
 </body>
