--- a/Doom/Doom.html
+++ b/Doom/Doom.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Doom</h2>
 <img src="Doom.jpg"> <br>
-Series: 3 issue mini-series, 2000<br>
-Publisher: Marvel<br>
+3 issues in 2000 by Marvel<br>
 Illustrator: Leonardo Manco<br>
 Writer: Chuck Dixon<br>
 
