--- a/Doom2099/Doom2099.html
+++ b/Doom2099/Doom2099.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Doom2099</h2>
 <img src="Doom2099.jpg"> <br>
-Series: 44 issues, 1993<br>
-Publisher: Marvel<br>
+44 issues in 1993 by Marvel
 <p>
 See <a href="../2099AD/2099AD.html">2099 A.D.</a> for cross title story arc.
 </p><p>
