--- a/DopeyDuck/DopeyDuck.html
+++ b/DopeyDuck/DopeyDuck.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<h2>Dopey Duck</h2>
 <img src="DopeyDuck.jpg"> 
 <img src="DopeyDuck2.jpg"> <br>
-Series: 2 issues, 1945 <br>
-Publisher: Timely, Marvel<br>
+2 issues in 1945 by Timely (Marvel)
 <p>
 Even in 1945 kids knew what a Daffy Duck, Bugs Bunny rip off looked like. Maybe it was hard to get sued for these things back then? Or did threats of a law suit convince them to stop?  This series continued into Wacky Duck.
 </p>
