--- a/DoraTheExplorer/DoraTheExplorer.html
+++ b/DoraTheExplorer/DoraTheExplorer.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h2>Dora the Explorer</h2>
+Dora the Explorer<br>
 <img src="DoraTheExplorer.jpg"> <br>
 Publisher: Nickelodeon (Viacom) 2000<br>
 <p>
