--- a/Doraemon/Doraemon.html
+++ b/Doraemon/Doraemon.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h2>Doraemon</h2>
+Doraemon<br>
 <img src="Doraemon.jpg"> <br>
 Creator: Fujiko F. Fujio<br>
 Series: 1969 Manga, 1.14 Billion (USD)<br>
