--- a/kb.html
+++ b/kb.html
@@ -4633,8 +4633,8 @@ Creative Knowledgebase<br>
 
 <tr>
 <td>Double Dragon</td>
-<td>1991</td>
-<td>Marvel</td>
+<td>1987</td>
+<td>Taito</td>
 <td><a href="DoubleDragon/DoubleDragon.html">Details</a></td>
 </tr>
 
