--- a/DrGiggles/DrGiggles.html
+++ b/DrGiggles/DrGiggles.html
@@ -2,18 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dr. Giggles</title>
 </head>
 
 <body>
-<h2>Dr. Giggles</h2>
-<img src="DrGiggles1.jpg"> 
-<img src="DrGiggles2.jpg"> <br>
-Series: 2 issue mini-series<br>
-Publisher: Dark Horse<br>
+<img src="DrGigglesMovie.jpg"> <br>
+Movie in 1992 by Universal Pictures, 2 issues by Dark Horse<br>
 <p>
-Written by STEVEN GRANT. Art by KENT BURLES and ALAN J. BURROWS. Cover by DOUG MAHNKE. The sleepy little town of Moorehigh is about to wake up to its worst nightmare: Evan Rendell, a.k.a. Dr. Giggles, is coming home to settle some old scores. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DrGigglesMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrGiggles1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrGiggles2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrGiggles3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrGiggles4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DrGiggles5.jpg" title="Holly Marie Combs"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Dr. Giggles is a 1992 American slasher film directed by Manny Coto, starring Larry Drake as Doctor Evan Rendell Jr. and Holly Marie Combs as the Jennifer Campbell. The film co-stars Cliff DeYoung and Glenn Quinn. 
+</p><p>
+The Comic series was written by STEVEN GRANT. Art by KENT BURLES and ALAN J. BURROWS. Cover by DOUG MAHNKE. The sleepy little town of Moorehigh is about to wake up to its worst nightmare: Evan Rendell, a.k.a. Dr. Giggles, is coming home to settle some old scores. 
 </p>
 
 </body>
