--- a/Dreadstar/Dreadstar.html
+++ b/Dreadstar/Dreadstar.html
@@ -13,12 +13,7 @@ Series: Epic Illustrated serial, #1-26 Epic 1982, <br>
 Publisher: Epic, First, Eclipse, Malibu, Dynamite, SLG<br>
 Creator Owned: Jim Starlin<br>
 <p>
-Dreadstar was the first comic-book series published by American publisher Epic Comics, an imprint of Marvel Comics, in 1982. It was centered on Vanth Dreadstar, sole survivor of the entire Milky Way galaxy, and an ensemble cast of crew mates, including cyborg sorcerer Syzygy Darklock, and their struggle to end an ancient war between two powerful, evil empires: The Church of The Instrumentality, run by the Lord Papal, and the Monarchy, administered by a puppet king.
-</p><p>
-The comic book, created by Jim Starlin, was bimonthly during most of its run. Epic published 26 issues, after which it was published by First Comics who carried it for 38 more issues, for a total of 64 issues. The first 41 issues were published bi-monthly, after which the book was published monthly for a time, though it resumed bi-monthly publication with issue 51. In 1994, a six issue limited series was published by Malibu Comics' Bravura line of creator-owned titles. 
-</p><p>
-Jim Starlin had stated in interviews as early as 2000 that he was working on a new Dreadstar series titled "Class Warfare" (including sample artwork in Slave Labor Graphics' The Price trade paperback), but the last mention of this was in late 2002. In 2011, in promotion for 'Breed III, Starlin again mentioned the possibility of another Dreadstar series. In 2014 there was talk of a movie, then in 2015 the movie script was going to be a TV series. As of 2018 the new Comic and or the TV series hasn't happened yet.
-</p><p>
+
 <div class="row">
 <div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -107,86 +102,69 @@ Jim Starlin had stated in interviews as early as 2000 that he was working on a n
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 </div>
-</p>
 
-<ul>
-<li><a href="DreadstarTheBeginning.html">Dreadstar The Beginning</a> Metamorphosis Odyssey Part 1</li>
-<li><a href="DreadstarAnnual01.html">Dreadstar The Price</a> Metamorphosis Odyssey Part 2</li>
-<li><a href="../MarvelGraphicNovel/MarvelGraphicNovel003.html">Dreadstar Graphic Novel</a> Metamorphosis Odyssey Part 3</li>
-<li><a href="Dreadstar01.html">Dreadstar #1</a> Epic</li>
-<li><a href="Dreadstar02.html">Dreadstar #2</a></li>
-<li><a href="Dreadstar03.html">Dreadstar #3</a></li>
-<li><a href="Dreadstar04.html">Dreadstar #4</a></li>
-<li><a href="Dreadstar05.html">Dreadstar #5</a></li>
-<li><a href="Dreadstar06.html">Dreadstar #6</a></li>
-<li><a href="Dreadstar07.html">Dreadstar #7</a></li>
-<li><a href="Dreadstar08.html">Dreadstar #8</a></li>
-<li><a href="Dreadstar09.html">Dreadstar #9</a></li>
-<li><a href="Dreadstar10.html">Dreadstar #10</a></li>
-<li><a href="Dreadstar11.html">Dreadstar #11</a></li>
-<li><a href="Dreadstar12.html">Dreadstar #12</a></li>
-<li><a href="Dreadstar13.html">Dreadstar #13</a></li>
-<li><a href="Dreadstar14.html">Dreadstar #14</a></li>
-<li><a href="Dreadstar15.html">Dreadstar #15</a></li>
-<li><a href="Dreadstar16.html">Dreadstar #16</a></li>
-<li><a href="Dreadstar17.html">Dreadstar #17</a></li>
-<li><a href="Dreadstar18.html">Dreadstar #18</a></li>
-<li><a href="Dreadstar19.html">Dreadstar #19</a></li>
-<li><a href="Dreadstar20.html">Dreadstar #20</a></li>
-<li><a href="Dreadstar21.html">Dreadstar #21</a></li>
-<li><a href="Dreadstar22.html">Dreadstar #22</a></li>
-<li><a href="Dreadstar23.html">Dreadstar #23</a></li>
-<li><a href="Dreadstar24.html">Dreadstar #24</a></li>
-<li><a href="Dreadstar25.html">Dreadstar #25</a></li>
-<li><a href="Dreadstar26.html">Dreadstar #26</a></li>
-<li><a href="Dreadstar27.html">Dreadstar #27</a> 1First</li>
-<li><a href="Dreadstar28.html">Dreadstar #28</a></li>
-<li><a href="Dreadstar29.html">Dreadstar #29</a></li>
-<li><a href="Dreadstar30.html">Dreadstar #30</a></li>
-<li><a href="Dreadstar31.html">Dreadstar #31</a></li>
-<li><a href="Dreadstar32.html">Dreadstar #32</a></li>
-<li><a href="Dreadstar33.html">Dreadstar #33</a></li>
-<li><a href="Dreadstar34.html">Dreadstar #34</a></li>
-<li><a href="Dreadstar35.html">Dreadstar #35</a></li>
-<li><a href="Dreadstar36.html">Dreadstar #36</a></li>
-<li><a href="Dreadstar37.html">Dreadstar #37</a></li>
-<li><a href="Dreadstar38.html">Dreadstar #38</a></li>
-<li><a href="Dreadstar39.html">Dreadstar #39</a></li>
-<li><a href="Dreadstar40.html">Dreadstar #40</a></li>
-<li><a href="Dreadstar41.html">Dreadstar #41</a></li>
-<li><a href="Dreadstar42.html">Dreadstar #42</a></li>
-<li><a href="Dreadstar43.html">Dreadstar #43</a></li>
-<li><a href="Dreadstar44.html">Dreadstar #44</a></li>
-<li><a href="Dreadstar45.html">Dreadstar #45</a></li>
-<li><a href="Dreadstar46.html">Dreadstar #46</a></li>
-<li><a href="Dreadstar47.html">Dreadstar #47</a></li>
-<li><a href="Dreadstar48.html">Dreadstar #48</a></li>
-<li><a href="Dreadstar49.html">Dreadstar #49</a></li>
-<li><a href="Dreadstar50.html">Dreadstar #50</a></li>
-<li><a href="Dreadstar51.html">Dreadstar #51</a></li>
-<li><a href="Dreadstar52.html">Dreadstar #52</a></li>
-<li><a href="Dreadstar53.html">Dreadstar #53</a></li>
-<li><a href="Dreadstar54.html">Dreadstar #54</a></li>
-<li><a href="Dreadstar55.html">Dreadstar #55</a></li>
-<li><a href="Dreadstar56.html">Dreadstar #56</a></li>
-<li><a href="Dreadstar57.html">Dreadstar #57</a></li>
-<li><a href="Dreadstar58.html">Dreadstar #58</a></li>
-<li><a href="Dreadstar59.html">Dreadstar #59</a></li>
-<li><a href="Dreadstar60.html">Dreadstar #60</a></li>
-<li><a href="Dreadstar61.html">Dreadstar #61</a></li>
-<li><a href="Dreadstar62.html">Dreadstar #62</a></li>
-<li><a href="Dreadstar63.html">Dreadstar #63</a></li>
-<li><a href="Dreadstar64.html">Dreadstar #64</a></li>
-<p>
-<li><a href="DreadstarMalibu0.html">Dreadstar Malibu 0</a></li>
-<li><a href="DreadstarMalibu1.html">Dreadstar Malibu 1</a></li>
-<li><a href="DreadstarMalibu2.html">Dreadstar Malibu 2</a></li>
-<li><a href="DreadstarMalibu3.html">Dreadstar Malibu 3</a></li>
-<li><a href="DreadstarMalibu4.html">Dreadstar Malibu 4</a></li>
-<li><a href="DreadstarMalibu5.html">Dreadstar Malibu 5</a></li>
-<li><a href="DreadstarMalibu6.html">Dreadstar Malibu 6</a></li>
-</p>
-</ul>
+</p><p>
+Dreadstar was the first comic-book series published by American publisher Epic Comics, an imprint of Marvel Comics, in 1982. It was centered on Vanth Dreadstar, sole survivor of the entire Milky Way galaxy, and an ensemble cast of crew mates, including cyborg sorcerer Syzygy Darklock, and their struggle to end an ancient war between two powerful, evil empires: The Church of The Instrumentality, run by the Lord Papal, and the Monarchy, administered by a puppet king.
+</p><p>
+The comic book, created by Jim Starlin, was bimonthly during most of its run. Epic published 26 issues, after which it was published by First Comics who carried it for 38 more issues, for a total of 64 issues. The first 41 issues were published bi-monthly, after which the book was published monthly for a time, though it resumed bi-monthly publication with issue 51. In 1994, a six issue limited series was published by Malibu Comics' Bravura line of creator-owned titles. 
+</p><p>
+Jim Starlin had stated in interviews as early as 2000 that he was working on a new Dreadstar series titled "Class Warfare" (including sample artwork in Slave Labor Graphics' The Price trade paperback), but the last mention of this was in late 2002. In 2011, in promotion for 'Breed III, Starlin again mentioned the possibility of another Dreadstar series. In 2014 there was talk of a movie, then in 2015 the movie script was going to be a TV series. As of 2018 the new Comic and or the TV series hasn't happened yet.
+</p><p>
+Dreadstar The Beginning: For the first time, the original, classic episodes of Dreadstar: Metamorphosis Odyssey from Marvel/Epic Illustrated are collected (some in full color) under the careful direction of creator Jim Starlin. These gorgeous, painted pages originally appeared in Epic from 1979 to 1982, and introduced audiences to Vance Dreadstar and the other characters whose saga would be continued in the Dreadstar series. 
+</p><p>
+The Price: a Dreadstar graphic novel by Jim Starlin featuring Syzygy Darklock. It is the second part of the Metamorphosis Odyssey story arc begun in Epic Illustrated magazine and tells the story of the magician-priest Darklock and his rise to power within the Church of the Instrumentality.
+</p><p>
+It was reprinted, with colorized artwork, in Dreadstar Annual #1 (Marvel Comics, 1983). 
+Featuring the origin of Sygyzy. The story was originally published in black-and-white by Eclipse Enterprises in 1981. Back cover has color pinup of Dreadstar's teammates.
+</p><p>
+The story begins with a description of the Empirical Galaxy and the two cosmic superpowers that rule it: The Monarchy and the Instrumentality, who have been engaged in a galactic war for two hundred years. The Monarchy is a twelve-centuries old dynasty founded and maintained by a Royal family. The Church of the Instrumentality is devoted to "The Twelve Gods", whose leaders hold both spiritual and temporal authority over half the Galaxy. The priests of the Instrumentality are scholars and magicians. The church is corrupt, and its leaders devoted to power, both temporal and magical.
+</p><p>
+As the story continues, Darklock's brother is horribly murdered. Darklock investigates and finds out that his brother was killed by a demon, and sets out to discover who sent it. Before he can investigate, he is called before the Lord High Papal, head of the church, who orders him to abandon the investigation. The official cause of death is ruled "industrial accident".
+</p><p>
+Darklock seems to accept the ruling, but plans to continue his investigation. He reveals this to his familiar, a nun named Sister Marian, and adds that his magical abilities are far more advanced than the church realizes. Though he had planned to use his powers to increase his standing in the church and thereby dictate state policy, he will now use them to find his brother's killer.
+</p><p>
+Darklock succeeds in learning which demon killed his brother, then raises the demon itself. Forcing answers from the demon with his magic powers, Darklock learns that it had been sent by an immensely powerful wizard, a man Darklock could not hope to stand against. However, the demon also reveals that while it was in the wizard's power, the wizard tortured it mercilessly, causing the demon to hate the wizard so greatly that it is willing to do something it would never otherwise have done: transport Darklock to a dimensional plane where he can absorb godlike magical energy, and become far more powerful than the wizard. 
+</p><p>
+Darklock agrees, and receives the power; though the ordeal is so great that his body is all but destroyed. He loses both legs, one arm, his right ear, and his left eye; and what remains of his body is wasted and unnaturally elongated. Using the remnants of his brother's estate, he repairs his body with cybernetic parts, maintaining his existence through his will, his great magical ability, and his powerful sense of self-belief.
+</p><p>
+He confronts the wizard who ordered his brother's death, only to learn that the wizard did everything precisely to bring about Darklock's ascent to power, so he could meet his destiny. The wizard had had a vision of the future where a great "event" is soon to happen, which will have a great positive effect on humanity. 
+</p><p>
+He foresaw that either Darklock or his brother would be prominently involved, so the wizard decided to ensure that the "event" took place and had Darklock's brother murdered to draw him in. Then he deliberately tortured the demon, so it would be angry enough to show Darklock the way to gain the vast power he has gained.
+</p><p>
+The wizard shows Darklock his vision of the future, thus ensuring it will take place. Furious at being made the wizard's tool, Darklock destroys him. As he dies, the wizard reveals that he knew Darklock would kill him, and welcomes it, since he believes he does not have the strength to face what lies ahead. Darklock must bear the burden of the future now. 
+</p><p>
+The wizard warns him that even the great power he has now will not be enough, and tells him of the awful way he can increase his power even further. Convinced now of the necessity of the "event" and his role in bringing it about, Darklock makes a terrible bargain: he sacrifices his familiar, Sister Marian, to be eaten alive by a demon. 
+</p><p>
+In return the demon grants him even more magical power (though this time in a manner that will not damage him further). Darklock's mystical power now dwarfs any other individual in the Empirical Galaxy, leading the Lord High Papal to say "There goes the most powerful force on two legs I've ever encountered. Darklock's might must be nearly equal to that of one of the Gods."
+</p><p>
+Darklock then resigns from the church (ironically explaining his condition as the result of an "industrial accident") and sets out for a minor planet called Caldor, a planet inhabited by farmers. On Caldor he meets Vanth, who warns him that he is the protector of the people who live there. 
+</p><p>
+Darklock surprises Vanth by revealing that he knows Vanth's history and of the sword of power, and tells him "In certain mystic circles unknown to you, you are referred to as Dreadstar the Starslayer." He tells Vanth of the "event" and of their linked destiny. Vanth initially resists the idea, but accepts Darklock's presence, and Darklock settles down to enlist Vanth in his plan.
+</p><p>
+At the end of The Price, Darklock gazes up at the stars, and hopes that Sister Marian will forgive him by the time he joins her in the "place reserved for souls that had a purpose in life."
+</p><p>
+The Dreadstar graphic novel, published in 1982, was the third in a series of Marvel Graphic Novels. This graphic novel is also the third part of the Metamorphosis Odyssey, and was printed in color from paintings by Jim Starlin.
+</p><p>
+Following the events told in the Eclipse Comics portion of the Metamorphosis Odyssey, the Dreadstar graphic novel opens with Vanth Dreadstar leading the life of a peaceful farmer. The planet on which he lived was the site of an Instrumentality experiment to create a race of cat-human hybrid warriors. The experiment was a failure, the hybrids were mild-natured and generally only suited to farming. Dreadstar married a human scientist and lived quietly for some decades.
+</p><p>
+As the story continues, it becomes apparent that the power of the sword has granted Dreadstar immortality, so he did not age along with his wife. He spent his time farming and studying magic and politics with sorcerer Syzygy Darklock. From Darklock he learned about the history of two equally matched enemies, the Instrumentality and the Monarchy. These two galactic empires fought a stalemated war for generations, finally turning into a conflict that neither side wanted to win since else their war-based economies would collapse. Darklock's plan was to force an end to the war.
+</p><p>
+At first Dreadstar was unwilling to resume his role as a warrior. But after a fleet of Monarchy ships destroyed his home, killing his wife and all his friends, he joined the military forces of the Monarchy and set into motion the plan to force an end to the war.
+</p><p>
+Dreadstar quickly rose to a military command rank, which enabled him to ensure that all members of the attack force that killed his wife and home were sent on suicide missions. He then assassinated the King of the Monarchy and intimidated the new monarch, the weak-willed Gregzor, into following his plan. When Gregzor protested that the great nobles and captains of industry would resist following along but Dreadstar answered that he would deal with any resistance the way he dealt with the former king.
+</p><p>
+The story continues in the fourth part of the Metamorphosis Odyssey, contained in the pages of the Marvel comic Dreadstar.
+</p><p>
+Dreadstar #1: A summary of the origin of Vanth Dreadstar and how he came to the planet Caldor and what happened afterwards that caused him to form a team against the evil Lord High Papal and the powerful Instrumentality in "The Quest."
+</p><p>
+Dreadstar #2: To find out why Willow, the cybernetic telepath on Dreadstar's team, can't reach her full potential, Syzygy mystically bonds their psyches and transports the two of them to a plane of psychic energy and finds out the truth in "Willow's Story." Syzygy brings out the latent telepathic abilities that Willow was suppressing due to her father's molestation of her.
+</p><p>
+Dreadstar #3: Dreadstar and his team go through an elaborate plan to obtain a tele-drive but the Lord High Papal will go to great lengths to stop them in "Holocaust."
+</p><p>
+Dreadstar #4: With the Monarchy losing its battle against the Lord High Papal and the powerful Instrumentality, Dreadstar visits King Gregzor and is asked to help in finding an assassin stalking the king in "The Hand of Darkness." First appearance of the mysterious Z.
+</p><p>
+Dreadstar #5: In "The Commune," Syzygy, Oedi and Skeevo visit the Commune to do some business and come face to face with the assassin Tuetun. And it turns into a battle of wits between Tuetun and Oedi, of which, in Oedi's words: "I doubt ol' two ton has the ammunition for such an encounter."
 
+</p>
 </body>
 </html>
