--- a/DeliriumsParty/DeliriumsParty.html
+++ b/DeliriumsParty/DeliriumsParty.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Delirium's Party: A Little Endless Storybook</h2>
 <img src="DeliriumsParty.jpg"> <br>
-Creator: Jill Thompson<br>
-Series: <br>
-Publisher: Marvel<br>
+1 issue created by Jill Thompson in 2009 by Vertigo (DC)
 <p>
-In an effort to rid Despair of her unhappiness once and for all, Little Delirium throws a party for her dour sister and invites siblings Dream, Destruction, Death, Destiny and Desire. But this is no ordinary affair. We're talking about a party planner who is the personification of delirium, so you can only imagine that this event will be as outrageous and unpredictable as Little Delirium's haircolor. But whether Delirium's party will be a smashing success - or whether it will end in tears - is anyone's guess. Brought to life through whimsical prose and watercolor by multiple award-winner Jill Thompson, DELIRIUM'S PARTY: A LITTLE ENDLESS STORYBOOK will be an affair to remember for all time - and all ages.
+In an effort to rid Despair of her unhappiness once and for all, Little Delirium throws a party for her dour sister and invites siblings Dream, Destruction, Death, Destiny and Desire. But this is no ordinary affair. We're talking about a party planner who is the personification of delirium, so you can only imagine that this event will be as outrageous and unpredictable as Little Delirium's hair color. But whether Delirium's party will be a smashing success - or whether it will end in tears - is anyone's guess. Brought to life through whimsical prose and watercolor by multiple award-winner Jill Thompson, DELIRIUM'S PARTY: A LITTLE ENDLESS STORYBOOK will be an affair to remember for all time - and all ages.
 </p>
 
 </body>
