--- a/DellaVision/DellaVision.html
+++ b/DellaVision/DellaVision.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="DellaVision1.jpg"> <img src="PattyPowers4.jpg"><br>
-Series: 7 issues 1955<br>
-Publisher: Atlas (Marvel)<br>
+7 issues in 1955 by Atlas (Marvel)
 <p>
 Della Vision ran during 1955 for 3 issues. The series then continued as Patty Powers.
 </p>
