--- a/kb.html
+++ b/kb.html
@@ -4281,8 +4281,8 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Delirium's Party: A Little Endless Storybook</td>
-<td>2011</td>
+<td>Delirium's Party</td>
+<td>2009</td>
 <td>Vertigo</td>
 <td><a href="DeliriumsParty/DeliriumsParty.html">Details</a></td>
 </tr>
@@ -4670,7 +4670,7 @@ Creative Knowledgebase<br>
 <td>Dracula: Lord of the Undead</td>
 <td>1998</td>
 <td>Marvel</td>
-<td><a href="DarculaLordOfTheUndead/DarculaLordOfTheUndead.html">Details</a></td>
+<td><a href="DraculaLordOfTheUndead/DraculaLordOfTheUndead.html">Details</a></td>
 </tr>
 
 <tr>
