--- a/DraculaLives/DraculaLives.html
+++ b/DraculaLives/DraculaLives.html
@@ -2,16 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dracula Lives!</title>
 </head>
 
 <body>
-<h2>Dracula Lives!</h2>
 <img src="DraculaLives.jpg"> <br>
-Series: 13 issue magazine format 1973<br>
-Publisher: Marvel<br>
+13 issue magazine format in 1973-1975 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DraculaLives13.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Dracula Lives! was an American black-and-white horror comics magazine published by Magazine Management, a corporate sibling of Marvel Comics. The series ran 13 issues and one annual publication from 1973 to 1975, and starred the Marvel version of the literary vampire Dracula.
 </p><p>
 A magazine rather than a comic book, it did not fall under the purview of the comics industry's self-censorship Comics Code Authority, allowing the title to feature stronger content, such as moderate profanity, partial nudity, and more graphic violence, than color comics of the time. featuring Dracula stories.
