--- a/kb.html
+++ b/kb.html
@@ -5775,6 +5775,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>George Carlin</td>
+<td>1937</td>
+<td>Creator</td>
+<td><a href="GeorgeCarlin/GeorgeCarlin.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Georgie Comics</td>
 <td>1945</td>
 <td>Marvel</td>
@@ -10676,6 +10683,13 @@ Creative Knowledgebase<br>
 <td>1970</td>
 <td>Creator</td>
 <td><a href="RichardCorben/RichardCorben.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Richard Pryor</td>
+<td>1940</td>
+<td>Creator</td>
+<td><a href="RichardPryor/RichardPryor.html">Details</a></td>
 </tr>
 
 <tr>
