--- a/DaveChappelle/DaveChappelle.html
+++ b/DaveChappelle/DaveChappelle.html
@@ -22,6 +22,10 @@
 <div class="mySlides" style="text-align: center;"><img src="DaveChappelle01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DaveChappelle02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DaveChappelle03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaveChappelle04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaveChappelle05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaveChappelle06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaveChappelle07.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
