Tales Of Voodoo

--- a/kb.html
+++ b/kb.html
@@ -12477,6 +12477,14 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Tales of Voodoo</td>
+<td>1968</td>
+<td>Eerie</td>
+<td><a href="TalesOfVoodoo/TalesOfVoodoo.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Tales to Astonish</td>
 <td>1959</td>
 <td>Marvel</td>
