--- a/kb.html
+++ b/kb.html
@@ -6055,6 +6055,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Gregory</td>
+<td>1989</td>
+<td>DC</td>
+<td><a href="Gregory/Gregory.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grendel: Devil Inside</td>
 <td>1989</td>
 <td>Dark Horse</td>
@@ -12482,7 +12489,6 @@ Creative Knowledgebase<br>
 <td>Eerie</td>
 <td><a href="TalesOfVoodoo/TalesOfVoodoo.html">Details</a></td>
 </tr>
-
 
 <tr>
 <td>Tales to Astonish</td>
