--- a/kb.html
+++ b/kb.html
@@ -7706,6 +7706,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Larry Gonick</td>
+<td>1946</td>
+<td>Creator</td>
+<td><a href="LarryGonick/LarryGonick.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Last Airbender</td>
 <td>2005</td>
 <td>Nickelodeon</td>
