--- a/LarryGonick/LarryGonick.html
+++ b/LarryGonick/LarryGonick.html
@@ -44,13 +44,17 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Larry Gonick (born 1946) is a cartoonist best known for The Cartoon History of the Universe, a history of the world in comic book form, which he published in installments from 1977 to 2009. He has also written The Cartoon History of the United States, and he has adapted the format for a series of co-written guidebooks on other subjects, beginning with The Cartoon Guide to Genetics in 1983. The diversity of his interests, and the success with which his books have met, have together earned Gonick the distinction of being "the most well-known and respected of cartoonists who have applied their craft to unravelling the mysteries of science".
+Larry Gonick (born 1946) is a cartoonist best known for The Cartoon History of the Universe, a history of the world in comic book form, which he published in installments from 1977 to 2009. He has also written The Cartoon History of the United States, and he has adapted the format for a series of co-written guidebooks on other subjects, beginning with The Cartoon Guide to Genetics in 1983. 
+</p><p>
+The diversity of his interests, and the success with which his books have met, have together earned Gonick the distinction of being "the most well-known and respected of cartoonists who have applied their craft to unravelling the mysteries of science".
 </p><p>
 Gonick was born on August 24, 1946, in San Francisco, California. He studied mathematics at Harvard University, receiving his bachelor's degree in 1967 and his master's degree in 1969.
 </p><p>
-From 1990 to 1997, Gonick penned a bimonthly "Science Classics" cartoon for the science magazine Discover. Each two-page comic discussed a recent scientific development, often one in interdisciplinary research.During the 1994-95 academic year, Gonick was a Knight Science Journalism Fellow at MIT. In 1997, his 14-issue series, Candide in China, published on the World Wide Web, described Chinese inventions. He also used to write the Kokopelli &amp; Company comic that appeared in the magazine Muse. He drew the satirical, anti-corporate comic Commoners for Common Ground and later explained:
+From 1990 to 1997, Gonick penned a bimonthly "Science Classics" cartoon for the science magazine Discover. Each two-page comic discussed a recent scientific development, often one in interdisciplinary research.During the 1994-95 academic year, Gonick was a Knight Science Journalism Fellow at MIT. In 1997, his 14-issue series, Candide in China, published on the World Wide Web, described Chinese inventions.
+</p><p>
+Larry used to write the Kokopelli &amp; Company comic that appeared in the magazine Muse. He drew the satirical, anti-corporate comic Commoners for Common Ground and later explained:
 <ul>
-Feeling alternately mournful and enraged about the shameless expropriation of public space, public enterprise, publicly held goods like the atmosphere, oceans, and rivers, not to mention roads, parks, sidewalks, genomes, and the broadcast spectrum—indeed the very idea of the common good—I decided to do something about it! Well, say something, anyway.
+"Feeling alternately mournful and enraged about the shameless expropriation of public space, public enterprise, publicly held goods like the atmosphere, oceans, and rivers, not to mention roads, parks, sidewalks, genomes, and the broadcast spectrum—indeed the very idea of the common good—I decided to do something about it! Well, say something, anyway."
 </ul>
 </p><p>
 Between 2009 and 2011 Gonick drew a humorous webcomic entitled Raw Materials that deals with technology and business matters, especially database administration. In collaboration with Dr. Kausik S Das of the University of Maryland Eastern Shore Gonick is currently developing concept-cartoon clicker questions for undergraduate physics students. This project is funded by the National Science Foundation.
