--- a/DistrictX/DistrictX.html
+++ b/DistrictX/DistrictX.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>DistrictX</h2>
 <img src="DistrictX.jpg"> <br>
-Series: 14 issues, 2004<br>
-Publisher: Marvel<br>
+14 issues in 2004 by Marvel
 <p>
 Written by David Hine Penciled by David Yardin Cover by STEVE MCNIVEN "MR. M" 
 </p><p>
