--- a/DoomTheEmperorReturns/DoomTheEmperorReturns.html
+++ b/DoomTheEmperorReturns/DoomTheEmperorReturns.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Doom The Emperor Returns</h2>
 <img src="DoomTheEmperorReturns.jpg"> <br>
-Series: 3 issue mini-series, 2002<br>
-Publisher: Marvel<br>
+3 issues in 2002 by Marvel
 <p>
 Illustrations by Leonardo Manco, Written by Chuck Dixon.
 </p><p>
