--- a/DragonLines/DragonLines.html
+++ b/DragonLines/DragonLines.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dragon Lines</h2>
 <img src="DragonLines.jpg"> <br>
-Series: 4 issue min-series, 1993<br>
-Publisher: Marvel<br>
+4 issues in 1993 by Marvel
 <p>
 Writer - Peter Quinones. Artist - Ron Lim and James Sanders III. Mystical martial arts.
 
