--- a/DragonLinesTheWayOfTheWarrior/DragonLinesTheWayOfTheWarrior.html
+++ b/DragonLinesTheWayOfTheWarrior/DragonLinesTheWayOfTheWarrior.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dragon Lines The Way Of The Warrior</h2>
 <img src="DragonLinesTheWayOfTheWarrior.jpg"> <br>
-Series: 2 issue min-series<br>
-Publisher: Epic (Marvel)<br>
+2 issues from Epic (Marvel)
 <p>
 The very popular Heavy Hitter returns! The evil demi-gods aim to use Tao's incredible powers for their own purposes, while the Monkey King and the Spirit Boxer fight to recruit him to perform good works. Written by Peter Quinones. Art and cover by Ron Lim and Jim Sanders III.
 </p><p>
