--- a/DragonsClaws/DragonsClaws.html
+++ b/DragonsClaws/DragonsClaws.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dragons Claws</h2>
 <img src="DragonsClaws.jpg"> <br>
-Series: 10 issue 1988<br>
-Publisher: Marvel UK<br>
+10 issues in 1988 by Marvel UK
 <p>
 "The Game!" Written by Simon Furman. Art by Geoff Senior. Dragon's Claws - Dragon, Mercy, Digit, Sacvenger, and Steel - were once the finest game palyers in the world. But this is not the world that you and I know! Earth, 6,000 years into the future, is a planet moving ever closer towards its sun. The seas are drying up, the animals are dying, and civil unrest runs rampant in the streets of every town and city. Once disbanded, the Dragon's Claws must now reunite for the betterment of manmind.
 
