--- a/Dragonslayer/Dragonslayer.html
+++ b/Dragonslayer/Dragonslayer.html
@@ -2,14 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dragonslayer</title>
 </head>
 
 <body>
-<img src="DragonslayerMovie.jpg">
+<img src="DragonslayerMovie.jpg"><br>
+1 Movie in 1981 by Paramount Pictures (Disney), 2 issues in 1981 by Marvel
 <p>
-1981 Paramount Pictures / Disney
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DragonslayerMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dragonslayer.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dragonslayer1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dragonslayer2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
 Dragonslayer is a 1981 American fantasy film directed by Matthew Robbins, from a screenplay he co-wrote with Hal Barwood. 
 </p><p>
@@ -21,13 +38,7 @@ A co-production between Paramount Pictures and Walt Disney Productions, Dragonsl
 </p><p>
 It's possible that this film was responsible for Disney's later creation Touchstone Pictures to produce more mature fare, starting with 1984's Splash.
 </p><p>
-<img src="Dragonslayer.jpg"> 
-<img src="Dragonslayer1.jpg"> 
-<img src="Dragonslayer2.jpg"> <br>
-Series: 1981, 2 issue mini-series, 1 magazine collection<br>
-Publisher: Marvel<br>
-<p>
-Magazine, collects Dragonslayer (1981) #1-2. Based on the screenplay by Hal Barwoods and Mathew Robbins. Adapted by Dennis O'Neil. Art by Marie Severin and John Tartaglione. When the land falls under the shadow of the last dragon, the people turn to the last surviving wizard for help. When tragedy befalls the kind old magic-user, his quest is passed down to his apprentice, a young man with little knowledge in the ways of sorcery and even less in the ways of battle. Can Galen find the courage and strength to become the world's last "Dragonslayer?!" Based on the classic sword &amp; sorcery movie.
+Dragonslayer Magazine, collects Dragonslayer (1981) #1-2. Based on the screenplay by Hal Barwoods and Mathew Robbins. Adapted by Dennis O'Neil. Art by Marie Severin and John Tartaglione. When the land falls under the shadow of the last dragon, the people turn to the last surviving wizard for help. When tragedy befalls the kind old magic-user, his quest is passed down to his apprentice, a young man with little knowledge in the ways of sorcery and even less in the ways of battle. Can Galen find the courage and strength to become the world's last "Dragonslayer?!" Based on the classic sword &amp; sorcery movie.
 </p><p>
 Marvel Comics' official comic adaptation of the 1981 movie "Dragonslayer." In this issue, villagers from the kingdom threatened by a dragon appeal to the wizard Ulrich to help them against the creature. But when Ulrich is killed, it's up to his apprentice Galen to do something in part one of this adaptation. Script by Dennis O'Neil and art by Marie Severin &amp; John Tartaglione. 
 </p>
