--- a/index.html
+++ b/index.html
@@ -10177,6 +10177,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Peter Bagg</td>
+<td>1957</td>
+<td>Creator</td>
+<td><a href="PeterBagg/PeterBagg.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Peter Paul Rubens</td>
 <td>1577</td>
 <td>Creator</td>
