--- a/index.html
+++ b/index.html
@@ -8952,6 +8952,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Michael Kaluta</td>
+<td>1947</td>
+<td>Creator</td>
+<td><a href="MichaelKaluta/MichaelKaluta.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Michelangelo</td>
 <td>1475</td>
 <td>Creator</td>
