Batman The Dark Knight

--- a/index.html
+++ b/index.html
@@ -1985,6 +1985,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Batman The Dark Knight Returns</td>
+<td>1986</td>
+<td>DC</td>
+<td><a href="BatmanTheDarkKnight/BatmanTheDarkKnight.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman The Killing Joke</td>
 <td>1988</td>
 <td>DC</td>
@@ -10104,6 +10111,13 @@ Creative Knowledgebase<br>
 <td>1995</td>
 <td>Marvel</td>
 <td><a href="OverTheEdge/OverTheEdge.html">Details</a></td>
+</tr>
+
+<tr>
+<td>P Craig Russell</td>
+<td>1951</td>
+<td>Creator</td>
+<td><a href="PCraigRussell/PCraigRussell.html">Details</a></td>
 </tr>
 
 <tr>
