--- a/index.html
+++ b/index.html
@@ -7587,6 +7587,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Kingdom Come</td>
+<td>1996</td>
+<td>DC</td>
+<td><a href="KingdomCome/KingdomCome.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kingdom of Wicked</td>
 <td>2004</td>
 <td>Dark Horse</td>
